<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TabBarExample!</string>
    <string name="app_name">美食范</string>
    <string name="menu">菜单</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">NUAA!</string>
    <string name="home_page">首页</string>
    <string name="collect">收藏</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="home_pagename">美食推荐系统</string>
    <string name="main_material">主料</string>
    <string name="assit_material">辅料</string>
    <string name="food_tags">美食标签</string>
    <string name="material_property">食材特性</string>
    <string name="food_steps">做法步骤</string>
    <string name="menu_food_list">美食浏览</string>
    <string name="setting_fontSize">字体大小</string>
    <string name="setting_noPic">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_read">阅读设置</string>
    <string name="setting_content">内容管理</string>
    <string name="setting_cache">清除缓存</string>
    <string name="setting_info">产品信息</string>
    <string name="setting_help">帮助信息</string>
    <string name="setting_about">关于我们</string>
    <string name="more_food">更多美食</string>
    <string name="about_food">美食范</string>
    <string name="about_qq">qq交流群:195853815</string>
    <string name="about_author">美食范小组出品</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="basic_action_1">删除</string>
    <string name="basic_action_2">Action_2</string>
    <string name="str_orange">#fe7b27</string> 
    <string name="help_title1">1、系统设置技巧</string>
    <string name="help_content1">保护眼睛--设置夜间模式\n节省流量--设置无图模式\n清除缓存--清除浏览记录</string>
    <string name="help_title2">2、没网也能浏览美食</string>
    <string name="help_content2">该系统具有本地数据库，没有网络只是影响图片加载，不影响系统功能</string>
    <string name="help_title3">3、美食收藏无需账户登录</string>
    <string name="help_content3">系统将收藏的美食存储在本地文件中，无需账户登录轻松收藏美食！</string> 

</resources>