<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_pic"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ff8c00" >

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_selec" />

        <TextView
            android:id="@+id/title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="红烧肉"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/food_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/right_back_selec"
            android:gravity="center_vertical"
            android:text="步骤"
            android:textColor="#ffffff"
            android:textSize="13sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/scrollview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/food_image"
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:src="@drawable/no_pic_1"
                android:scaleType="fitXY" >
            </ImageView>

            <TextView
                android:id="@+id/main_material"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#cccccc"
                android:text="@string/main_material"
                android:textColor="#000000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/m_material"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="safsgsdg"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/assit_material"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#cccccc"
                android:text="@string/assit_material"
                android:textColor="#000000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/a_material"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="safsgsdg"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/food_tags"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#cccccc"
                android:text="@string/food_tags"
                android:textColor="#000000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/f_tags"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="safsgsdg"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/material_property"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#cccccc"
                android:text="@string/material_property"
                android:textColor="#000000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/m_property"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="safsgsdg"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>